# singularis

./: .gitignore  S0 Output.json  extract_to_file.sh  layout.json  notes.md  pyproject.toml  run.sh
outputs/: article.tei.xml  article10.tei.xml  layout.json  s0.json  s1.json  s1_article.json  s1_article10.json  s1_old.json  segments.json
src/singularis/: article.tei.xml  article2.tei.xml  imrad_grobid_pipeline.py  imrad_spacy_matchers.py  label_with_spacy.py  layout_extractor.py  matchers.py  models.py  out.json  out.jsonl  out.md  out.tei.xml  out1.json  out1.md  out2.json  out2.md  parse_pdf_grobid.py  pdf_extractor.py  rules.json  s0.json  segmenter.py  worker.py
