[tool.poetry]
name = "singularis"
version = "0.1.0"
description = ""
authors = ["vilinicz <v.ilinicz@gmail.com>"]
readme = "README.md"
packages = [{ include = "singularis", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pymupdf = "==1.26.5"
camelot-py = {extras = ["cv"], version = "^1.0.9"}
pydantic = "^2.12.0"
spacy = "^3.8.7"
orjson = "^3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
