[tool.poetry]
name = "singularis"
version = "0.1.0"
description = ""
authors = ["vilinicz <v.ilinicz@gmail.com>"]
readme = "README.md"
packages = [{ include = "singularis", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pymupdf = "==1.26.5"
#camelot-py = {extras = ["cv"], version = "^1.0.9"}
pydantic = "^2.12.0"
spacy = "^3.8.7"
orjson = "^3.11.3"
torch = ">=2.2,<2.3"
docling = "^2.57.0"
numpy = "<2"
pdfminer-six = "^20250506"
pypdf = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
